--- a/VsOpenFile.vcxproj
+++ b/VsOpenFile.vcxproj
@@ -157,6 +157,16 @@
   <ItemGroup>
     <ClCompile Include="VsOpenFile.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cmdline.h" />
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="VsOpenFile.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon1.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
